@@ -1,3 +1,8 @@
+2008-07-16  George Peter Staplin <georgeps@users.sf.net>
+	
+	* win/tclWinThrd.c: Test for TLS_OUT_OF_INDEXES to make certain	that
+	thread key creation is successful.
+
 2008-07-16  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOO.c, generic/tclOOInt.h, generic/tclOOBasic.c:
